--- a/package/package.json
+++ b/package/package.json
@@ -1,44 +1,43 @@
 {
-	"name": "package-name",
-	"version": "0.0.0",
-	"description": "TODO:",
-	"author": {
-		"email": "TODO:",
-		"name": "TODO:",
-		"url": "TODO:"
-	},
-	"license": "MIT",
-	"keywords": [
-		"astro-integration",
-		"astro-component",
-		"withastro",
-		"astro",
-		"TODO:"
-	],
-	"homepage": "TODO:",
-	"publishConfig": {
-		"access": "public"
-	},
-	"sideEffects": false,
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"default": "./dist/index.js"
-		}
-	},
-	"files": ["dist"],
-	"scripts": {
-		"dev": "tsup --watch",
-		"build": "tsup"
-	},
-	"type": "module",
-	"peerDependencies": {
-		"astro": "^4.15.8"
-	},
-	"dependencies": {
-		"astro-integration-kit": "^0.16.1"
-	},
-	"devDependencies": {
-		"tsup": "^8.3.0"
-	}
+  "name": "astro-runtime-config",
+  "version": "0.0.1",
+  "description": "Astro integration that allows to retrieve astro configuration object at runtime",
+  "author": {
+    "name": "Dovias",
+    "url": "https://github.com/dovias"
+  },
+  "license": "MIT",
+  "keywords": [
+    "astro-integration",
+    "astro-component",
+    "withastro",
+    "astro",
+    "astro-runtime-config"
+  ],
+  "homepage": "https://github.com/Dovias/astro-runtime-config",
+  "publishConfig": {
+    "access": "public"
+  },
+  "sideEffects": false,
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "files": ["dist"],
+  "scripts": {
+    "dev": "tsup --watch",
+    "build": "tsup"
+  },
+  "type": "module",
+  "peerDependencies": {
+    "astro": "^4.14"
+  },
+  "dependencies": {
+    "astro-integration-kit": "^0.16.1"
+  },
+  "devDependencies": {
+    "tsup": "^8.3.0"
+  }
 }
