--- a/package/package.json
+++ b/package/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astro-runtime-config",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "Astro integration that allows to retrieve astro configuration object at runtime",
   "author": {
     "name": "Dovias",
@@ -25,7 +25,9 @@
       "default": "./dist/index.js"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "tsup --watch",
     "build": "tsup"
