--- a/package/package.json
+++ b/package/package.json
@@ -34,10 +34,10 @@
   },
   "type": "module",
   "peerDependencies": {
-    "astro": "^4.14"
+    "astro": "^4.14 || ^5.0.0"
   },
   "dependencies": {
-    "astro-integration-kit": "^0.16.1"
+    "astro-integration-kit": "^0.18.0"
   },
   "devDependencies": {
     "tsup": "^8.3.0"
